# vicmon

./: .gitignore  Cargo.toml  bindings.h  sdkconfig.defaults
.cargo/: config.toml
components/lvgl_configs/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lvgl_port.c  lvgl_port.h  waveshare_rgb_lcd_port.h
components/ui/: CMakeLists.txt  idf_component.yml
components/ui/ui/: fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  vars.h  vicmon.eez-project  vicmon.eez-project-ui-state
components/ui/ui/fonts/: ui_font_roboto_med_18.c  ui_font_roboto_med_22.c  ui_font_roboto_med_48.c  ui_font_roboto_reg_14.c  ui_font_roboto_reg_32.c  ui_font_roboto_reg_48.c
components/ui/ui/images/: ui_image_batt_60.c  ui_image_batt_80.c  ui_image_batt_90.c  ui_image_batt_full.c  ui_image_batt_unknown.c  ui_image_generator.c  ui_image_power.c  ui_image_settings.c  ui_image_solar.c  ui_image_sun.c  ui_image_temp.c
src/: client.rs  devices.rs  main.rs  ui.rs  wifi.rs
src/http/: config.html  server.rs
src/ui/: ui.rs  vars.rs
